kubernetes-kompose/backend-service-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.prod.yml -o kubernetes
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.network/hardhome-docker-network-prod: "true"
    io.kompose.service: backend-service
  name: backend-service
spec:
  containers:
    - args:
        - npm
        - start
      image: 121487958432.dkr.ecr.us-east-1.amazonaws.com/hardhome-backend-service-image-prod:latest
      name: hardhome-backend-service-prod
      resources: {}
      volumeMounts:
        - mountPath: /usr/src/app
          name: backend-service-claim0
  restartPolicy: OnFailure
  volumes:
    - name: backend-service-claim0
      persistentVolumeClaim:
        claimName: backend-service-claim0
status: {}
