kubernetes-kompose/hardhome-web-server-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.prod.yml -o kubernetes
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: hardhome-web-server
  name: hardhome-web-server
spec:
  containers:
    - image: 121487958432.dkr.ecr.us-east-1.amazonaws.com/hardhome-web-server-image-prod:latest
      name: hardhome-web-server-prod
      ports:
        - containerPort: 80
      resources: {}
      volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: hardhome-web-server-claim0
          readOnly: true
  restartPolicy: OnFailure
  volumes:
    - name: hardhome-web-server-claim0
      persistentVolumeClaim:
        claimName: hardhome-web-server-claim0
        readOnly: true
status: {}
