kubernetes-kompose/mongo-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.prod.yml -o kubernetes
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo-express
  name: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo-express
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.prod.yml -o kubernetes
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/hardhome-docker-network-prod: "true"
        io.kompose.service: mongo-express
    spec:
      containers:
        - env:
            - name: ME_CONFIG_MONGODB_ADMINPASSWORD
              value: example
            - name: ME_CONFIG_MONGODB_ADMINUSERNAME
              value: root
            - name: ME_CONFIG_MONGODB_URL
              value: mongodb://root:example@mongonex:27017/
          image: mongo-express
          name: hardhome-mongo-express-prod
          ports:
            - containerPort: 8081
          resources: {}
      restartPolicy: Always
status: {}
