kubernetes-kompose/api-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.prod.yml -o kubernetes
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: api-service
  name: api-service
spec:
  ports:
    - name: "3020"
      port: 3020
      targetPort: 3020
  selector:
    io.kompose.service: api-service
status:
  loadBalancer: {}
