kubernetes-kompose/hardhome-web-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.prod.yml -o kubernetes
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: hardhome-web-server
  name: hardhome-web-server
spec:
  ports:
    - name: "11000"
      port: 11000
      targetPort: 80
  selector:
    io.kompose.service: hardhome-web-server
status:
  loadBalancer: {}
